--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
-              <img src="./images/Companylogo.png" alt="Company Logo" width="140px" height="80px">
+              <img src="./images/logo_Main.png" alt="Company Logo" width="90px" height="80px">
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -112,7 +112,7 @@
                   <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="SignUp_Login.html">
+                  <a class="nav-link" href="SignUp_Page.html">
                     <i class="fa fa-user" aria-hidden="true"></i>
                     <span>
                       Login
@@ -474,7 +474,7 @@
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/t1.jpg" alt="">
+              <!-- <img src="images/t1.jpg" alt=""> -->
             </div>
             <div class="detail-box">
               <h5>
@@ -489,7 +489,7 @@
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/t2.jpg" alt="">
+              <!-- <img src="images/t2.jpg" alt=""> -->
             </div>
             <div class="detail-box">
               <h5>
@@ -504,7 +504,7 @@
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/t3.jpg" alt="">
+              <!-- <img src="images/t3.jpg" alt=""> -->
             </div>
             <div class="detail-box">
               <h5>
@@ -812,8 +812,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved
       </p>
     </div>
   </footer>
