--- a/public/contact.html
+++ b/public/contact.html
@@ -58,7 +58,7 @@
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                alfaonecarefacilitymanagement@gmail.com
               </span>
             </a>
           </div>
@@ -312,8 +312,7 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        &copy; <span id="displayYear"></span> All Rights Reserved
       </p>
     </div>
   </footer>
