--- a/public/service.html
+++ b/public/service.html
@@ -120,7 +120,7 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
-              <img src="./images/Companylogo.png" alt="Company Logo" width="140px" height="80px">
+              <img src="./images/log" alt="Company Logo" width="140px" height="80px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
@@ -417,9 +417,7 @@
                 Company
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                Alfa One Care Services is dedicated to providing exceptional and innovative solutions to enhance your quality of life. We offer a wide range of services designed to meet diverse needs, all delivered with a commitment to excellence and sustainability.
               </p>
             </div>
           </div>
@@ -442,9 +440,7 @@
                 Services
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                Experience the difference with Alfa One Care Services – where quality, compassion, and innovation come together to serve you better.
               </p>
             </div>
           </div>
