--- a/public/team.html
+++ b/public/team.html
@@ -82,7 +82,7 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
-              <img src="./images/Companylogo.png" alt="Company Logo" width="140px" height="80px">
+              <img src="./images/logo_Main.png" alt="Company Logo" width="140px" height="80px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
@@ -136,15 +136,15 @@
           Our Team
         </h2>
         <p>
-          Lorem ipsum dolor sit amet, non odio tincidunt ut ante, lorem a euismod suspendisse vel, sed quam nulla mauris
-          iaculis. Erat eget vitae malesuada, tortor tincidunt porta lorem lectus.
+          At Alfa One Care Services, our team is the heart and soul of our organization. Comprised of dedicated professionals from diverse backgrounds, each member brings unique skills and a shared passion for excellence
+
         </p>
       </div>
       <div class="row">
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/t1.jpg" alt="">
+              <!-- <img src="images/t1.jpg" alt=""> -->
             </div>
             <div class="detail-box">
               <h5>
@@ -159,7 +159,7 @@
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/t2.jpg" alt="">
+              <!-- <img src="images/t2.jpg" alt=""> -->
             </div>
             <div class="detail-box">
               <h5>
@@ -174,7 +174,7 @@
         <div class="col-md-4 col-sm-6 mx-auto">
           <div class="box">
             <div class="img-box">
-              <img src="images/t3.jpg" alt="">
+              <!-- <img src="images/t3.jpg" alt=""> -->
             </div>
             <div class="detail-box">
               <h5>
@@ -244,9 +244,7 @@
                 Company
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                Alfa One Care Services is dedicated to providing exceptional and innovative solutions to enhance your quality of life. We offer a wide range of services designed to meet diverse needs, all delivered with a commitment to excellence and sustainability.
               </p>
             </div>
           </div>
@@ -269,9 +267,7 @@
                 Services
               </h5>
               <p>
-                Randomised words which don't look even slightly believable. If you are going to use a passage of
-                Lorem
-                Ipsum, you need to be sure
+                Experience the difference with Alfa One Care Services – where quality, compassion, and innovation come together to serve you better.
               </p>
             </div>
           </div>
