--- a/public/service.html
+++ b/public/service.html
@@ -120,7 +120,8 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
-              <img src="./images/log" alt="Company Logo" width="140px" height="80px">
+              <img src="./images/logo_Main.png" alt="Company Logo" width="90px" height="80px" style="border-radius: 20px;">
+
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
