--- a/public/about.html
+++ b/public/about.html
@@ -82,7 +82,8 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
-              <img src="./images/logo_Main.png" alt="Company Logo" width="140px" height="80px">
+              <img src="./images/logo_Main.png" alt="Company Logo" width="90px" height="80px" style="border-radius: 20px;">
+
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
@@ -141,7 +142,9 @@
               </h2>
             </div>
             <p class="detail_p_mt">
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, orThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, orThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
+              Welcome to Alfa One Care Services, where we are dedicated to providing exceptional care and innovative solutions to enhance the quality of life for our clients. With a passion for excellence and a commitment to sustainability, we offer a comprehensive range of services designed to meet diverse needs and exceed expectations.
+                   <br><br>
+              At Alfa One Care Services, we are more than just a service provider – we are your partner in achieving a better, more fulfilling life. Join us on our journey to make a positive difference in the world.
             </p>
             <a href="about.html" class="">
               Read More
@@ -150,7 +153,7 @@
         </div>
         <div class="col-md-6 px-0">
           <div class="img-box ">
-            <img src="images/about-img.jpg" class="box_img" alt="about img">
+            <img src="images/abtus.jpg" class="box_img" alt="about img">
           </div>
         </div>
       </div>
