--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
-              <img src="./images/logo_Main.png" alt="Company Logo" width="90px" height="80px">
+              <img src="./images/logo_Main.png" alt="Company Logo" width="90px" height="80px" style="border-radius: 20px;" >
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -440,7 +440,7 @@
         </div>
         <div class="col-md-6 px-0">
           <div class="img-box ">
-            <img src="images/about-img.jpg" class="box_img" alt="about img">
+            <img src="images/abtus.jpg" class="box_img" alt="about img">
           </div>
         </div>
       </div>
@@ -520,7 +520,7 @@
       <div class="row">
         <div class="col-md-6 px-0">
           <div class="img-box ">
-            <img src="images/contact-img.jpg" class="box_img" alt="about img">
+            <img src="images/getintouch.jpg" class="box_img" alt="about img">
           </div>
         </div>
         <div class="col-md-5 mx-auto">
